--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SIEM Dashboard</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Chart.js for graphs -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 
@@ -21,11 +21,15 @@
         <div class="menu-items">
           <li><a href="/">Home</a></li>
           <li><a href="/dashboard">Dashboard</a></li>
+          <li><a href="/dashboard">Dashboard</a></li>
+          <li><a href="/monitoring">Monitoring</a></li>
+          <li><a href="#">Threat Detection</a></li>
+          <li><a href="#">Analytics</a></li>
+          <li><a href="#">Detection</a></li>
+          <li><a href="#">Alerts</a></li>
         </div>
-      </div>
     </div>
-  </nav>
-
+</nav>
   <div class="container dashboard">
     <h1>SIEM Dashboard</h1>
     
