--- a/monitoring.html
+++ b/monitoring.html
@@ -3,12 +3,119 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Log Monitoring</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <style>
+        /* Additional styles for the log monitoring page */
+        .monitoring-container {
+            margin-top: 50px;
+        }
+
+        .log-container {
+            max-height: 400px;
+            overflow-y: auto;
+            border: 2px solid #ddd;
+            padding: 15px;
+            background-color: #f9f9f9;
+            border-radius: 8px;
+            font-family: monospace;
+            font-size: 14px;
+            white-space: pre-wrap;
+            line-height: 1.5;
+        }
+
+        .log-entry {
+            padding: 5px 0;
+        }
+
+        .log-entry:hover {
+            background-color: #efefef;
+        }
+
+        #openFolderBtn {
+            padding: 10px 20px;
+            background-color: #4caf50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1.2rem;
+        }
+
+        #openFolderBtn:hover {
+            background-color: #45a049;
+        }
+
+        .toolbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .search-bar input {
+            width: 250px;
+            padding: 10px;
+            border: 2px solid #ddd;
+            border-radius: 4px;
+            font-size: 16px;
+        }
+
+        .refresh-button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        .refresh-button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-    <div class="container monitoring">
-        <h1>Monitoring</h1>
-        <button id="openFolderBtn">Select Folder</button>
-      </div>
+
+    <!-- Navbar Section -->
+    <nav>
+        <div class="navbar">
+            <div class="container nav-container">
+                <input class="checkbox" type="checkbox" name="" id="" />
+                <div class="hamburger-lines">
+                    <span class="line line1"></span>
+                    <span class="line line2"></span>
+                    <span class="line line3"></span>
+                </div>  
+                <div class="menu-items">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/dashboard">Dashboard</a></li>
+                    <li><a href="/monitoring">Monitoring</a></li>
+                    <li><a href="#">Threat Detection</a></li>
+                    <li><a href="#">Analytics</a></li>
+                    <li><a href="#">Detection</a></li>
+                    <li><a href="#">Alerts</a></li>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container monitoring-container">
+        <h1>Log Monitoring</h1>
+
+        <div class="toolbar">
+            <div class="search-bar">
+                <input type="text" id="search" placeholder="Search logs...">
+            </div>
+            <button class="refresh-button" onclick="refreshLogs()">Refresh Logs</button>
+        </div>
+
+        <div id="logContainer" class="log-container">
+            <!-- Logs will be loaded here -->
+        </div>
+    </div>
+
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
